[tool.black]
line-length=79

[tool.poetry]
name = "hikari-clusters"
version = "0.0.0"
description = "Tool for clustering with hikari."
authors = ["Circuit"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/TrigonDev/hikari-clusters"
repository = "https://github.com/TrigonDev/hikari-clusters"
documentation = "https://github.com/TrigonDev/hikari-clusters/wiki"
keywords = ["hikari", "discord", "clustering", "bot", "ipc"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.11"
hikari = "^2.0.0.dev105"
websockets = "^10.1"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
mypy = "^0.931"
flake8 = "^4.0.1"
pre-commit = "^2.15.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
