[tool.black]
line-length = 79
skip-magic-trailing-comma = true

[tool.poetry]
name = "hikari-clusters"
version = "0.0.0"
description = "An advanced yet easy-to-use clustering tool for Hikari."
authors = ["Circuit"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/TrigonDev/hikari-clusters"
repository = "https://github.com/TrigonDev/hikari-clusters"
documentation = "https://github.com/TrigonDev/hikari-clusters/wiki"
keywords = ["hikari", "discord", "clustering", "bot", "ipc"]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
hikari = "^2.0.0"
websockets = "^11.0"
pytest-cov = ">=3,<5"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
flake8 = "^5.0.4"
pytest = "^7.3.2"
nox = "^2023.4.22"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
